# CubeX_PnP

./: .qmlls.ini  BUGFIX_2026-03-13_UI卡顿复盘.md  CMakeLists.txt  CubeX_PnP_en_US.ts  CubeX_PnP_zh_CN.ts  FEATURE_IMPLEMENTATION_REPORT.md  I18N_IMPLEMENTATION.md  Main.qml  PACKAGE_LIBRARY_OPTIMIZATION.md  PickAndPlace_PCB5_2026_03_15.csv  PickAndPlace_PCB5_2026_03_21.csv  SERIAL_DEVICE_USAGE.md  SMTWORK_OPTIMIZATION_SUMMARY.md  SMTWORK_QUICK_REFERENCE.md  SMTWORK_TIMEOUT_HANDLING.md  SMTWork_SERIAL_USAGE.md  TASK_COMPLETION_VERIFICATION.md  Version.h  image.qrc  main.cpp  package_library_example.csv  resource.qrc  run_app.bat  test_csv_reads.py  test_import.ps1  translate.ps1  封装.csv
FluentUI/example/: example_en_US.ts  example_zh_CN.ts
FluentUI/example/src/: main.cpp
FluentUI/src/Qt6/imports/FluentUI/Controls/: FluTableView.qml
QML/: AppMainWindow.qml
QML/component/: CubexFluTableView.qml  DraggableFocusOverlay.qml  HomePageDialogs.qml  HomePageMotionControlPanel.qml  HomePageTableDelegates.qml  HomePageTableToolbar.qml  SerialConnectionPanel.qml
QML/page/: CameraCard.qml  DeviceConnectionPage.qml  HomePage.qml  PackageLibraryPage.qml  SettingsPage.qml
docs/: Engineering_Risk_Assessment.md
gerber_renderer/src/: CMakeLists.txt
gerber_renderer/src/gerber/: gerber.cpp
gerber_renderer/src/gerber/parser/: dcode_parser.h
src/component/: CircularReveal.cpp
src/helper/: CameraDeviceManager.cpp  CameraDeviceManager.h  CameraScanManager.cpp  CameraScanManager.h  CsvFileReader.cpp  CsvFileReader.h  GerberPreviewManager.cpp  GerberPreviewManager.h  GerberPreviewRenderer.cpp  GerberPreviewRenderer.h  OpenCvPreviewManager.cpp  OpenCvPreviewManager.h  SMTWork.cpp  SMTWork.h  SMTWorkIntegrationExample.cpp  SerialPortManager.cpp  SerialPortManager.h  SettingsHelper.cpp  TranslateHelper.cpp  TranslateHelper.h
